@@ -21,6 +21,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #15061: The inappropriately named hmac.secure_compare has been
+  renamed to hash.compare_digest, restricted to operating on bytes inputs
+  only and had its documentation updated to more acurrately reflect both its
+  intent and its limitations
+
 - Issue #13841: Make child processes exit using sys.exit() on Windows.
 
 - Issue #14936: curses_panel was converted to PEP 3121 and PEP 384 API.
